# foto-organizer

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  PLAN_DE_TRABAJO.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/foto_organizer/: __init__.py  __main__.py
src/foto_organizer/core/: __init__.py  backup.py  cleaner.py  organizer.py  scanner.py  verifier.py
src/foto_organizer/ui/: __init__.py  duplicates_dialog.py  gallery_view.py  help_dialog.py  main_window.py  settings_dialog.py  verification_dialog.py  workers.py
src/foto_organizer/utils/: __init__.py  app_settings.py  hasher.py  logger.py  metadata.py  thumbnails.py
tests/: conftest.py  test_app_settings.py  test_backup.py  test_cleaner.py  test_duplicates_dialog.py  test_entry_point.py  test_gallery_view.py  test_help_dialog.py  test_integration.py  test_logger.py  test_main_window.py  test_metadata.py  test_organizer.py  test_scanner.py  test_settings_dialog.py  test_thumbnails.py  test_verification_dialog.py  test_verifier.py  test_workers.py
