[project]
name = "foto-organizer"
version = "0.1.0"
description = "Organizador de fotos y vídeos de escritorio con backup seguro y verificación de integridad"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyside6>=6.8",
    "pillow>=11.0",
    "pillow-heif>=0.21",
    "ffmpeg-python>=0.2",
    "tqdm>=4.67",
    "loguru>=0.7",
]

[dependency-groups]
dev = [
    "ruff>=0.11",
    "mypy>=1.15",
    "pytest>=8.3",
    "pytest-qt>=4.4",
    "pre-commit>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/foto_organizer"]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
# TC es el nuevo nombre del grupo TCH (renombrado en Ruff >= 0.8)
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "TC"]

[tool.mypy]
strict = true
python_version = "3.12"
files = ["src", "tests"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["ffmpeg.*", "pillow_heif.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
